# lumina-lob

./: .coverage  .gitignore  CHANGELOG.md  MANIFEST.in  PLAN.md  PROJECT_SPEC.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  docs.yml
benchmarks/: __init__.py  engine_benchmark.py
blog/: build-a-lob-simulator.md  social-launch.md
cpp/: CMakeLists.txt  bindings.cpp
cpp/include/lumina_lob/: book.hpp  event_log.hpp  lumina_lob.hpp  matching.hpp  order.hpp  order_type.hpp  price_level.hpp  side.hpp
cpp/src/: book.cpp  event_log.cpp  matching.cpp  order.cpp  price_level.cpp
cpp/tests/: test_core.cpp
docs/: index.md
docs/api/: agents.md  core.md  data.md  market_model.md  rl.md  simulation.md  viz.md
docs/blog/: build-a-lob-simulator.md
docs/tutorials/: architecture.md  custom-agent.md  quickstart.md
lumina_lob/: __init__.py  book.py  matching.py  order.py  price_level.py  simulation.py
lumina_lob/agents/: __init__.py  base.py  informed_trader.py  market_maker.py  noise_trader.py  skewed_market_maker.py
lumina_lob/core/: __init__.py  book.py  event_log.py  matching.py  order.py  price_level.py
lumina_lob/data/: __init__.py  calibration.py  databento.py  polygon.py  replay.py
lumina_lob/market_model/: __init__.py  impact.py  reference_price.py
lumina_lob/rl/: __init__.py  compare.py  env.py  evaluate.py  train.py
lumina_lob/viz/: __init__.py  depth_ladder.py  history.py  realtime.py
notebooks/: 02_agents_and_impact.ipynb  03_rl_market_maker.ipynb  04_calibration.ipynb  05_benchmark_report.ipynb
tests/: test_benchmark.py  test_blog.py  test_book.py  test_calibration.py  test_coverage.py  test_cpp_core.py  test_databento.py  test_docs.py  test_event_log.py  test_impact.py  test_informed_trader.py  test_market_maker.py  test_noise_trader.py  test_notebook.py  test_packaging.py  test_polygon.py  test_reference_price.py  test_release.py  test_replay.py  test_rl_compare.py  test_rl_env.py  test_rl_evaluate.py  test_rl_train.py  test_simulation.py  test_skewed_market_maker.py  test_snapshot.py  test_social_launch.py  test_viz.py
