[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-lob"
version = "0.1.0"
description = "Production-grade limit order book simulator with market-making and RL support"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Satyam Das", email = "satyamdas03@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "databento>=0.80.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pybind11>=2.12",
]
viz = [
    "matplotlib>=3.7",
    "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lumina_lob*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
