[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-lob"
version = "0.1.0"
description = "Production-grade limit order book simulator with market-making and RL support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Satyam Das", email = "satyamdas03@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "databento>=0.80.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pybind11>=2.12",
    "build>=1.0",
]
viz = [
    "matplotlib>=3.7",
    "plotly>=5.18",
]
all = [
    "lumina-lob[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/satyamdas03/lumina-lob"
Repository = "https://github.com/satyamdas03/lumina-lob"
Issues = "https://github.com/satyamdas03/lumina-lob/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lumina_lob*"]
exclude = ["tests*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
